Add installation & setup screenshot to showcase section

--- a/content/docs/Algorithima.mdx
+++ b/content/docs/Algorithima.mdx
@@ -139,6 +139,7 @@ You can contribute code, documentation, or UI/UX improvements.
 ## Showcase & Demo
 
 - [Live Demo](https://algorithima.web.app)
+<img src="https://github.com/user-attachments/assets/ab1b3c19-3c1b-4307-9ae0-34aa2568287b" alt="Installation & Setup Screenshot" width="100%" />
 - <Banner href="https://algorithima.web.app" text="Try the Demo or Report Feedback" />
 
 ## TL;DR Summary
